# deadpartymedia

./: AGENTS.md  package.json  turbo.json
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
apps/backend/backend/: asgi.py  urls.py  wsgi.py
apps/backend/backend/settings/: __init__.py  base.py  dev.py  prod.py
apps/backend/core/: adapters.py  admin.py  models.py  serializers.py  signals.py  urls.py  views.py
